@@ -6,6 +6,8 @@ Changes in version 1.6.2 beta (2008-09-27):
 - Added wxSFFlexGridShape with a behaviour similar to classic wxFlexGridSizer (each grid's column and row can have different size).
 - wxSFShapeBitmap::CreateFromFile() function now takes also bitmap type parameter (use bitmap types supported by wxBitmap class). Previously
   only BMP files were supported.
+- wxSFDiagramManager::AddShape(wxClassInfo* shapeInfo, const wxPoint& pos, bool saveState) function doesn't Refresh() new shape anymore
+  (the wxSFShapeBase::wxRefresh() must be called explicitelly if neccessary).
 - Fixed wxSFGridShape's RTTI information
 - Fixed grid shapes minimal size. Even empty grid shape with zero cell space has non-zero size.
 
